src/test/resources/validation/error/queryReturningInterfaceCollection/schema.graphqls
interface Node {
  id: ID!
}

type ProgramStudierett implements Node @table(name : "STUDIERETT") {
  id: ID!
}

type Query {
  nodes(ids: [ID!]): [Node]
}
